ImagePlatformKWin: Clip sub image ROI for combined image to prevent OpenCV assert crash

The possibility should be completely prevented now.

BUG: 503682